Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-8993

Enter Find String (Cmd+E on Mac) does not work unless Find panel is shown at least once

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 3.1.0
    • Qt Creator 2.7.0-rc
    • Editors
    • None
    • 54bed74549d4366aaedb035c370bf0ed331d4922

      Enter Find String (Cmd+E on Mac) is really useful way to find occurrences of currently selected text across file or project.

      However there seems to be a bug, which prevents Cmd+E from working if Find panel (Cmd+F) was not shown yet (since app launch).

      Steps to reproduce:
      1. Close qtcreator and open it again
      2. Open some text file (whatever)
      3. Select some word (i.e. via mouse) and hit Cmd+E (Edit > Find/Replace > Enter Find String)
      4. Press Cmd+G (Edit > Find/Replace > Find Next)
      5. It has NO EFFECT
      6. Now open via Cmd+F find panel and close it via Esc
      7. Repeat steps 2-4, once you reach step 4 Find Next works now!

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            davschul David Schulz
            ono Adam Strzelecki
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes