Make Enter Find String enabled regardless of Find

Previously Enter Find String (Ctrl+E) required opening Find toolbar at least
once, which is minor but noticeable annoyance.

With this change it always opens Find without focus, so it lines up with Find
Next Selected behavior and also with default Mac behavior. It does also show
yellow highlight for all occurrences without moving cursor.

Task-number: QTCREATORBUG-8993
Change-Id: I1eb8f151d5482895cc49fa5281e7d4e66cf31545
Reviewed-by: Eike Ziller <eike.ziller@digia.com>